terraform/main.tf
data "aws_availability_zones" "available" {}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.77.0"

  name                 = "demo-vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "demo_subnet" {
  name       = "demo-db"
  subnet_ids = module.vpc.public_subnets

  tags = {
    Name = "Demo subnet group"
  }
}

resource "aws_db_parameter_group" "demo_parameter" {
  name   = "demo-aws-parameter-group"
  family = "postgres15"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_security_group" "demo_rds" {
  name   = "demo-rds"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Demo_RDS"
  }
}
/*
resource "aws_db_instance_role" "tf_db_role" {
  db_instance_identifier = aws_db_instance.identifier
  feature_name           = "S3_INTEGRATION"
  role_arn               = "aws:iam::877879097973:role/TF-jenkins-role"
}
*/

resource "aws_db_instance" "demo_db_instance" {
  identifier             = "instance"
  instance_class         = "db.t3.micro"
  allocated_storage      = 5
  engine                 = "postgres"
  engine_version         = "15.3"
  username               = "demo"
  password               = "demodemo"
  db_subnet_group_name   = aws_db_subnet_group.demo_subnet.name
  vpc_security_group_ids = [aws_security_group.demo_rds.id]
  parameter_group_name   = aws_db_parameter_group.demo_parameter.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}
